2013-05-25  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (Qgeometry, Qworkarea, Qmm_size, Qframes, Qsource): Remove.
	(struct MonitorInfo, free_monitors): Remove.
	(x_make_monitor_attribute_list): Call make_monitor_attribute_list.
	(Fx_display_monitor_attributes_list): Call make_monitor_attribute_list.
	(syms_of_xfns): Remove DEFSYM for Qgeometry, Qworkarea, Qmm_size,
	Qframes, Qsource.

	* nsfns.m (Qgeometry, Qworkarea, Qmm_size, Qframes, Qsource): Remove.
	(struct MonitorInfo, free_monitors): Remove.
	(ns_screen_name): Make static.
	(ns_make_monitor_attribute_list): Call make_monitor_attribute_list.
	(syms_of_nsfns): Remove DEFSYM for Qgeometry, Qworkarea, Qmm_size,
	Qframes, Qsource.

	* frame.h (Qgeometry, Qworkarea, Qmm_size, Qframes, Qsource): Declare.
	(struct MonitorInfo): New struct.
	(free_monitors, make_monitor_attribute_list): Declare.

	* frame.c (Qgeometry, Qworkarea, Qmm_size, Qframes, Qsource): New
	Lisp_Object:s.
	(free_monitors, make_monitor_attribute_list): New functions.
	(syms_of_frame): DEFSYM Qgeometry, Qworkarea, Qmm_size, Qframes,
	Qsource.

2013-05-25  Xue Fuqiao  <xfq.free@gmail.com>

	* callproc.c (call_process): Refine the doc string.  (Bug#14045)

2013-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c: Apply keyboard decoding only to events that come directly
	from the tty, not from unread-command-events (bug#14368).
	(read_event_from_main_queue): New function, extracted from read_char).
	(read_decoded_char): Remove.
	(read_decoded_event_from_main_queue): New function to replace it.
	(read_char): Use it.
	(read_key_sequence): Use read_char rather than read_decoded_char.

	* keyboard.c (read_decoded_char): Don't decode under w32 (bug#14403).

2013-05-22  Barry OReilly  <gundaetiapo@gmail.com>  (tiny change)

	* casetab.c (init_casetab_once): Fix last change (bug#14424).

2013-05-22  Kenichi Handa  <handa@gnu.org>

	The following changes are to fix the setting of